@@ -708,6 +708,14 @@ reloadpcdb: 99
 // Re-load the Message of the Day (admin command)
 reloadmotd: 99
 
+// Changes the GM level of another character
+// (lasts until reboot, or gm list reload)
+adjgmlvl: 99
+
+// Changes the required GM level of an @ command
+// (effect lasts until restart or command reload)
+adjcmdlvl: 99
+
 // [Un]Disguise All Players (admin command)
 disguiseall: 99
 undisguiseall: 99
